--- a/resources/index.css
+++ b/resources/index.css
@@ -79,6 +79,10 @@ p {
 display: inline;
 }
 
+.mobile-menu {
+
+    display: none;
+}
 
 
 /* Headers */
@@ -576,11 +580,13 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 /*=== media query to hide social media nav icons ===*/
 
-@media (max-width: 61.125rem) {
+@media (max-width: 995px) {
     .site-header-nav .social-media {
         display: none;
     }
 }
+
+
 
 /*=== Media Query For Mobile Menu Button ===*/
 
@@ -646,9 +652,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 	
 	}
 
-	/*.mobile-menu:hover .drop-down {
-	display: block;
-	}*/
+
 
 	.mobile-menu:hover .menu-button {
 	background-color: #6fa5c4;
@@ -659,11 +663,11 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 }
 
-@media (max-width: 64rem) {
+@media (min-width: 420px) and (max-width: 480px){
 
-    .social-media-icon {
+    .mobile-menu {
 
-        display:inline-flex;
+    margin-left: -85%;
 
     }
 
@@ -671,25 +675,15 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 
 
+
+
 /*=== Media Query For Mobile Menu Button HIDE ===*/
 
 @media (min-width: 64rem) and (max-width: 125rem) {
 
-    .mobile-menu {
+    .mobile-menu li {
     
-        font-style: Montserrat;	
-        color: #fff;
-        background-color: #0c50aa;
-        border: solid 0.20rem rgba(240, 231, 231, .3);
-        padding: 0.5rem 1.5rem;
-        text-decoration: none;
-        border-color: none;
-        border-style: hidden;
-        font-size: 0.75rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        text-align: center;
-        cursor: pointer;
+
         display: none;
         
     }
