--- a/resources/index.css
+++ b/resources/index.css
@@ -498,6 +498,26 @@ to any div before it, or, it put a space between the text and pics in the two co
     }
 }
 
+
+/*=== Media Query for CTA Container to be centered ===*/
+
+@media (max-width: 480px) {
+
+	#intro .cta {
+
+        position: relative;
+        padding: 1.5rem 2.5rem;
+        border: solid 3px rgba(240, 231, 231, .3);
+        background-color: rgba(240, 231, 231, .3);
+        margin-left: 6.25rem;
+        margin-top: 6.63rem;
+        display: inline-block;	
+        align-content: center;
+	
+	}
+
+}
+
 /*=== Media query below gives a bit more breathing room/space when the browser at 40em ===*/
 @media (min-width: 40em) {
     header,
@@ -663,11 +683,11 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 }
 
-@media (min-width: 326px) and (max-width: 480px){
+@media (min-width: 391px) and (max-width: 480px){
 
     .mobile-menu {
 
-    margin-left: -65%;
+    margin-left: -45%;
 
     }
 
