Adjusted margin left for mobile menu button

--- a/resources/index.css
+++ b/resources/index.css
@@ -687,7 +687,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 
     .mobile-menu {
 
-    margin-left: -45%;
+    margin-left: -60;
 
     }
 
