--- a/resources/index.css
+++ b/resources/index.css
@@ -197,7 +197,7 @@ h1, h2, h3 {
 }
 
 .solid-tone {
-    background-color: #0c50aa;
+    background-color: #226cb1;
 }
 
 .light-tone p, h1 {
@@ -329,6 +329,109 @@ prevents images from spilling out when browser shrinks, resulting in botton hori
 	justify-content: space-around;
 	width: 100%;
 	margin-top: 14rem;
+}
+
+/*=== CARD FLIPS FOR BLOG POSTS ===*/
+
+.card-flip,
+.card-flip1,
+.card-flip2,
+.card-flip3,
+.card-flip4,
+.card-flip5 {
+
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 18.75rem;
+    width: 25rem;
+    transform-style: preserve-3d;
+    transition: all 0.9s ease;
+    background: none;
+    cursor:pointer;
+    
+}
+
+/*.card-flips {
+    
+
+        position: relative;
+        top: 0;
+        left: 0;
+        height: 18.75rem;
+        width: 25rem;
+        transform-style: preserve-3d;
+        transition: all 0.9s ease;
+        background: none;
+        cursor:pointer;
+        
+    
+}*/
+
+
+.card-front {
+
+
+    top: 0;
+    left: 0;
+    height: 18.75rem;
+    max-width: 25rem;
+    position: absolute;
+    backface-visibility: hidden;
+    overflow: hidden;
+   
+
+}
+
+.post-one {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 18.75rem;
+    max-width: 25rem;
+    backface-visibility: hidden;
+    overflow: hidden;
+    color:rgb(255, 255, 255);
+    background: #226cb1;
+    text-align: center;
+    transform: rotateY(180deg);
+   
+
+
+}
+
+.post-one h4 {
+    font-family: montserrat;
+    font-size: 1.5rem;
+    padding: 1.8rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
+.card-flip.flip {
+    transform: rotateY(180deg);
+}
+
+.card-flip1.flip {
+    transform: rotateY(180deg);
+}
+
+.card-flip2.flip {
+    transform: rotateY(180deg);
+}
+
+.card-flip3.flip {
+    transform: rotateY(180deg);
+}
+
+.card-flip4.flip {
+    transform: rotateY(180deg);
+}
+
+.card-flip5.flip {
+    transform: rotateY(180deg);
 }
 
 
@@ -501,7 +604,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 /*=== Media Query for CTA Container to be centered ===*/
 
-@media (max-width: 480px) {
+@media (min-width: 395px) and (max-width: 760px) {
 
 	#intro .cta {
 
@@ -509,12 +612,28 @@ to any div before it, or, it put a space between the text and pics in the two co
         padding: 1.5rem 2.5rem;
         border: solid 3px rgba(240, 231, 231, .3);
         background-color: rgba(240, 231, 231, .3);
-        margin-left: 5.25rem;
-        margin-top: 0.5rem;
+        margin-left: 2.5rem;
+        margin-right: auto;
+        margin-top: 0.1rem;
         display: inline-block;	
-        align-content: center;
+        
+        
 	
 	}
+
+    h1 {
+        font-size: 1.60rem;
+    }
+
+  .Subscribe1 h1 {
+    font-size: 1.5rem;
+  }
+
+  .blog h1 {
+    font-size: 1.60rem;
+  }
+
+
 
 
 }
