--- a/resources/index.css
+++ b/resources/index.css
@@ -1,16 +1,13 @@
-body {
+* {
     font-size: 1rem;
     font-family: Montserrat;
     line-height: 1.9;
     box-sizing: border-box; 
 }
 
-body,
-h1,
-h2,
-h3,
-p {
+body {
     margin: 0;
+    padding: 0;
 }
 
 
@@ -22,6 +19,7 @@ p {
 .logo {
     cursor: pointer;
     align-content: center;
+    margin: 1rem;
 }
 
 
@@ -35,12 +33,12 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
+   
 	width:100%;
 	height:auto;
-	padding: 0.125rem 5.625rem;
+	
     box-sizing: border-box;
-    z-index: 10;
+    z-index: 1;
 }
 
 .nav-links ul {
@@ -64,7 +62,8 @@ p {
 
 
 
-.nav-links a {
+.nav-links a,
+.post-one a {
     text-decoration: none;
 
 	font-size: 1.25rem;
@@ -77,12 +76,34 @@ p {
 
 .site-header-nav .social-media {
 display: inline;
+margin: 1rem;
 }
 
 .mobile-menu {
 
     display: none;
+    cursor: pointer;
 }
+
+.menu-button {
+
+	background-color: #6fa5c4;
+	border: none;
+	
+	color:#ffffff;
+	text-decoration: none;
+	padding: 0.4rem 1.8rem;
+	font-size: 0.85rem;
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
+	cursor: pointer;
+	display: block;
+	position:relative;
+	margin-top: 0.50rem;
+
+}
+
 
 
 /* Headers */
@@ -153,34 +174,37 @@ h1, h2, h3 {
 
     /*===== ANCHOR TAG COLORS =======*/
 
-    .light-tone a {
+    #light-tone a,
+    .blog a {
         font-weight: bold;
         text-decoration: none;
         color: #fff;
     }
 
-    .light-tone a:hover {
+ 
+
+    #light-tone a:hover {
         color: #226cb1;
     }
 
-    .white a {
+    #white a {
         font-weight: bold;
         text-decoration: none;
         color: black;
     }
 
-    .white a:hover {
+    #white a:hover {
         color: #226cb1;
     }
 
-    .solid-tone a {
+    #solid-tone a {
         font-weight: bold;
         text-decoration: none;
         color: #fff;
     }
 
 
-    .solid-tone a:hover {
+    #solid-tone a:hover {
         color: #6fa5c4;
     }
 
@@ -188,37 +212,47 @@ h1, h2, h3 {
 
 /*===DIV SECTION COLORS ===*/
 
-.light-tone {
+#light-tone {
     background-color: #6fa5c4;
 }
 
-.white {
+#white {
     background-color: #fff;
 }
 
-.solid-tone {
-    background-color: #226cb1;
+#solid-tone {
+    background-color: #6fa5c4;
 }
 
-.light-tone p, h1 {
+#light-tone h1 {
     color: #fff;
+    font-size: 1.75rem;
     text-align: center;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
+}
+
+#light-tone p{
+    color: #fff;
+    font-size: 1.2rem;
+    text-align: center;
+   
 }
 
 
 
 
-.white p {
+#white p {
     color:rgb(17, 16, 16);
     text-align: center;
     padding-bottom: 1.5rem;
+    font-size: 1.2rem;
     
 }
 
-.white h2 {
+#white h2 {
     color: rgb(17, 16, 16);
     text-align: center;
+    font-size: 1.5rem;
     padding-bottom: 1.2rem;
 }
 
@@ -227,13 +261,18 @@ h1, h2, h3 {
 
 /* When I change text align to justify, it undoes the text align center for light tone div. I  had to created a class for 
 p and h1 to center it */
-.solid-tone ,p ,h2 {
+#solid-tone ,p ,h2 {
     color: #fff;
     text-align: center;
     
 }
 
-.solid-tone h2 {
+#solid-tone p {
+    font-size: 1.2rem;
+}
+
+#solid-tone h2 {
+    font-size: 1.5rem;
     padding-bottom: 1.2rem;
 }
 
@@ -270,13 +309,13 @@ to left and right when minimizing screen, our 70.5rem is the maximum width. MIN 
 images white img and solid-tone img, and this restored proper placement of logo and li. Also, Max width and display block
 prevents images from spilling out when browser shrinks, resulting in botton horizontal scroll bar. ===*/
 
-.white img {
+#white img {
     display: block;
     max-width: 100%;
     
 }
 
-.solid-tone img {
+#solid-tone img {
     display: block;
     max-width: 100%;
 }
@@ -295,13 +334,13 @@ prevents images from spilling out when browser shrinks, resulting in botton hori
     height: auto;
 }
 
-.blog h1 {
+#blog h1 {
     color: rgb(32, 31, 31);
     text-align: center;
     line-height: 4rem;
-    font-weight: bold;
-	font-size: 2rem;
-	font-weight: bold;
+    
+	font-size: 1.75rem;
+	font-style: italic;
     margin-bottom: 4rem;
 }
 
@@ -529,16 +568,18 @@ input {
 
     /*== SUBSCRIBE1 SECTION ==*/
 
-    .Subscribe1 {
+    #Subscribe1 {
     background-color: #6fa5c4;
     }
 
-    .Subscribe1 h1 {
+    #Subscribe1 h1 {
     text-transform: uppercase;
     font-size: 2.2rem;
+    text-align: center;
+    color: #fff;
     }
 
-    .Subscribe1 h3 {
+    #Subscribe1 h3 {
     padding-bottom: 1rem;
     color: #fff;
     text-align: center;
@@ -579,6 +620,8 @@ input {
             margin-top: 1rem;
             }
 
+
+      
        
 
 /*========================== MEDIA QUERIES =====================================*/
@@ -604,7 +647,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 /*=== Media Query for CTA Container to be centered ===*/
 
-@media (min-width: 395px) and (max-width: 500px) {
+@media (min-width: 320px) and (max-width: 500px) {
 
 	#intro .cta {
 
@@ -612,9 +655,10 @@ to any div before it, or, it put a space between the text and pics in the two co
         padding: 1.5rem 2.5rem;
         border: solid 3px rgba(240, 231, 231, .3);
         background-color: rgba(240, 231, 231, .3);
-        margin-left: auto;
+        margin-left: 2.5rem;
         margin-right: auto;
-        margin-top: 6.63rem;
+        margin-top: 0.63rem;
+        margin-bottom: 3.63rem;
         display: inline-block;	
         justify-content: center;
         justify-items: center;	
@@ -627,7 +671,7 @@ to any div before it, or, it put a space between the text and pics in the two co
         font-size: 1.60rem;
     }
 
-  .Subscribe1 h1 {
+  #Subscribe1 h1 {
     font-size: 1.5rem;
   }
 
@@ -716,7 +760,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 @media (max-width: 64rem) {
 
-    .nav-links a {
+    /*.nav-links a {
         text-decoration: none;
         padding: 8px 8px 8px 8px;
         font-size: 0.8rem;
@@ -729,15 +773,32 @@ to any div before it, or, it put a space between the text and pics in the two co
         
     }
 
-}
+}*/
 
 
 /*=== media query to hide social media nav icons ===*/
 
-@media (max-width: 1024px) {
+/*@media (max-width: 1024px) {
     .site-header-nav .social-media {
         display: none;
     }
+}*/
+
+.nav-links  {
+    position: fixed;
+    left: -100%;
+    top: 3.70rem;
+    gap: 0;
+    flex-direction: column;
+  
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.site-header-nav .social-media {
+    
+    display: none;
 }
 
 
@@ -748,7 +809,8 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 .mobile-menu {
     position: relative;
-    display:inline-block;
+    display:block;
+    margin: 1rem;
     
 }
 
@@ -756,18 +818,11 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 	background-color: #6fa5c4;
 	border: none;
-	
+	bottom: 0.2rem;
 	color:#ffffff;
 	text-decoration: none;
-	padding: 0.4rem 1.8rem;
-	font-size: 0.85rem;
-	font-weight: 400;
-	text-transform: uppercase;
-	text-align: center;
-	cursor: pointer;
-	display: inline-block;
-	position:relative;
-	margin-top: 0.50rem;
+	padding: 0.2rem 1.2rem;
+	
 
 }
     
@@ -780,9 +835,11 @@ to any div before it, or, it put a space between the text and pics in the two co
 	display: none;
 	position: relative;
 	background-color: rgba(240, 231, 231, .3);
-	min-width: 4rem;
+	
 	z-index: 1;
 	margin-top: 0.75rem;
+   
+    
 	}
 
   
@@ -793,6 +850,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 	text-decoration: none;
 	display: block;
     text-align: center;
+    
 	}
 
 	.drop-down li {
@@ -819,12 +877,23 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 @media (min-width: 375px) and (max-width: 480px){
 
-    .mobile-menu {
+    /*.mobile-menu {
 
     margin-left: -70;
 
+    }*/
+
+    .post-one h4 {
+        font-size: 1rem;
     }
 
+        .card-flip,
+        .card-flip1,
+        .card-flip2,
+        .card-flip3,
+        .card-flip4,
+        .card-flip5,
+        .card-front,
         .image-size,
         .post-one {
             height: 13.375rem;
@@ -841,7 +910,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 /*=== Media Query For Mobile Menu Button HIDE ===*/
 
-@media (min-width: 64rem) and (max-width: 125rem) {
+/*@media (min-width: 64rem) and (max-width: 125rem) {
 
     .mobile-menu li {
     
@@ -852,7 +921,7 @@ to any div before it, or, it put a space between the text and pics in the two co
 
 
 
-}
+}*/
 
 @media (max-width: 515px) {
 
@@ -863,5 +932,7 @@ to any div before it, or, it put a space between the text and pics in the two co
         font-size: 1rem;
         
     }
+
+}
 
 }
